# cv-hersheys

./: .env.example  .gitignore  README.md  SPEC_DRIVEN_CONTRACT.md  TESTING_REPORT.md  descripcion.md  docker-compose.vps.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  health.py  images.py  me.py  ocr.py  results.py
backend/app/core/: celery_app.py  config.py  errors.py  security.py  tokens.py
backend/app/db/: engine.py  init_db.py  seeding.py  session.py
backend/app/models/: image.py  result.py  user.py
backend/app/security/: current_user.py
backend/app/services/: fictitious_sales.py  image_optimization.py  ocr_external.py  queue.py  storage.py  validation.py
backend/app/tasks/: __init__.py  process_image.py
backend/db/init/: 001_schema.sql  002_seed_default_user.sql
backend/tests/: test_auth_endpoints.py  test_config.py  test_cors.py  test_current_user.py  test_db.py  test_error_response.py  test_fictitious_sales.py  test_health.py  test_health_checks.py  test_image_ocr_info.py  test_image_validation.py  test_images_file_download.py  test_images_list.py  test_images_upload.py  test_integration_e2e.py  test_integration_frontends.py  test_me_endpoint.py  test_models.py  test_ocr_external.py  test_ocr_proxy.py  test_process_image_task.py  test_request_logging.py  test_results_endpoints.py  test_security.py  test_seeding.py  test_smoke_containers.py  test_storage_service.py
dashboard/: README.md  package-lock.json  package.json  (+1 more)
(+68 files in other folders)
