[project]
name = "hersheys-cv-backend"
version = "0.1.0"
description = "Backend API for Hershey's CV System"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29",
  "bcrypt>=4.1",
  "celery>=5.3",
  "fastapi>=0.109",
  "minio>=7.2",
  "pyjwt>=2.8",
  "pydantic-settings>=2.0",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20",
  "hypothesis>=6.0",
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]
"app/api/dependencies.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]
markers = ["integration: requires docker-compose services (Postgres, MinIO, Redis, backend-api, backend-worker)"]
